--- a/_posts/2016-11-7-DO.md
+++ b/_posts/2016-11-7-DO.md
@@ -1,15 +1,15 @@
 ---
 layout: post
 title: D.O
-date: 2017-08-12
+date: 2016-11-7-DO
 categories: [Games]
 description: D.O
 tags: [Games,Unity3D]
 keywords: Games, D.O
 icon: icon-playframework-alt
+haveImg: true
+headerImg: 2016-11-7-DO.jpg
 ---
-
-# D.O
 
 ## 특징
 - 아케이드
@@ -29,10 +29,10 @@ icon: icon-playframework-alt
 - 차후 제공
 
 ## 인게임 캡처
-![1](/assets/img/2017-8-12-DO/DOImg.jpg)
-![1](/assets/img/2017-8-12-DO/DO.jpg)
-![1](/assets/img/2017-8-12-DO/DOGAME.jpg)
-![1](/assets/img/2017-8-12-DO/theme.jpg)
+![1](/assets/img/2016-11-7-DO/DOImg.jpg)
+![1](/assets/img/2016-11-7-DO/DO.jpg)
+![1](/assets/img/2016-11-7-DO/DOGame.jpg)
+![1](/assets/img/2016-11-7-DO/theme.jpg)
 
 ## 인게임 동영상
 - 없음
