--- a/_posts/2017-3-25-GodJump.md
+++ b/_posts/2017-3-25-GodJump.md
@@ -7,9 +7,9 @@ description: 신을 향해 JUMP !
 tags: [Games,Unity3D]
 keywords: Games, 신을-향해-JUMP
 icon: icon-playframework-alt
+haveImg: true
+headerImg: 2017-3-25-GodJump.jpg
 ---
-
-# 신을 향해 JUMP
 
 ## 특징
 - 아케이드 게임
