--- a/_posts/2017-3-25-ITUP.md
+++ b/_posts/2017-3-25-ITUP.md
@@ -7,9 +7,10 @@ description: It Up
 tags: [Games,Unity3D]
 keywords: Games, It-Up
 icon: icon-playframework-alt
+haveImg: true
+headerImg: 2017-3-25-ITUP.png
 ---
 
-# It Up
 
 ## 특징
 - 어드벤처 게임
