--- a/_posts/2017-3-25-RockU.md
+++ b/_posts/2017-3-25-RockU.md
@@ -7,9 +7,10 @@ description: Rock U
 tags: [Games,Unity3D]
 keywords: Games, Rock-U
 icon: icon-playframework-alt
+haveImg: true
+headerImg: 2017-3-25-RockU.jpg
 ---
 
-# Rock U
 
 ## 특징
 - 리듬 게임
