--- a/_posts/2017-3-25-Shape.md
+++ b/_posts/2017-3-25-Shape.md
@@ -7,6 +7,8 @@ description: Shape
 tags: [Games,Cocos2d-X]
 keywords: Games, Shape
 icon: icon-playframework-alt
+haveImg: true
+headerImg: 2017-3-25-Shape.png
 ---
 
 # Shape
