--- a/_posts/2017-3-25-Witch.md
+++ b/_posts/2017-3-25-Witch.md
@@ -7,6 +7,8 @@ description: 힉, 핫 마법쓰는 노동자
 tags: [Games,Cocos2d-X]
 keywords: Games, 힉-핫-마법쓰는-노동자
 icon: icon-playframework-alt
+haveImg: true
+headerImg: 2017-3-25-Witch.jpg
 ---
 
 ## 특징
