포스트 수정

--- a/_posts/2016-11-7-DO.md
+++ b/_posts/2016-11-7-DO.md
@@ -12,21 +12,21 @@ headerImg: 2016-11-7-DO.jpg
 ---
 
 ## 특징
-- 아케이드
-- 사용엔진 : Unity
-- 1박2일 게임제작 대회
+아케이드
+사용엔진 : Unity
+1박2일 게임제작 대회
 
 ## 플레이 방법
-- 굴러오는 공이 떨어지기 전에 다음 발판을 마련해야됨
-- 공이 떨어지면 게임 끝
-- 이전 발판과 똑같은 높이 마련시 보너스
+굴러오는 공이 떨어지기 전에 다음 발판을 마련해야됨
+공이 떨어지면 게임 끝
+이전 발판과 똑같은 높이 마련시 보너스
 
 
 ## 관련 링크
- - Github [D.O](https://github.com/GanZinam/D.O)
+[Github D.O Repo](https://github.com/GanZinam/D.O)
  
 ## 다운로드
-- 차후 제공
+차후 제공
 
 ## 인게임 캡처
 ![1](/assets/img/2016-11-7-DO/DOImg.jpg)
@@ -35,4 +35,4 @@ headerImg: 2016-11-7-DO.jpg
 ![1](/assets/img/2016-11-7-DO/theme.jpg)
 
 ## 인게임 동영상
-- 없음
+없음
