FIX : Unloaded old url image

--- a/_posts/Games/2015-6-27-Shape.md
+++ b/_posts/Games/2015-6-27-Shape.md
@@ -27,19 +27,10 @@ headerImg: 2015-6-27-Shape.png
 - 구글 플레이 : [링크](https://play.google.com/store/apps/details?id=com.threekb.shape&hl=ko)
 
 ## 인게임 캡처
-![1](https://lh3.googleusercontent.com/gd4sAGgkpi2BZ9RC9qYrjAFlwQxadPQZkih_hWjBX8TUxrQ67B2fYsDPznXJ44UiYd0=h900-rw)
-![1](https://lh3.googleusercontent.com/vI4TLkELZQPH8KM2-1IcTbAYgwPddFybEhaxgDZ-mca-Lz07Ir4bvrPESmmcg7hUGpq3=h900-rw)
-![1](https://lh3.googleusercontent.com/YI9zcM08FizKWrS2C4TB7-IyZX2AOIcA15oU0seeOCQmkKkUdgPek8I6pFv-yBjceg=h900-rw)
-> ![1](http://postfiles12.naver.net/20150627_251/kyechan99_1435411920029p7Iz1_PNG/2.PNG?type=w1)
-> ![1](http://postfiles11.naver.net/20150627_266/kyechan99_1435411920196NO0zf_PNG/3.PNG?type=w1)
->
-> ![1](http://postfiles14.naver.net/20150627_141/kyechan99_1435412340511mTgfd_JPEG/7.png?type=w1)
-> ![1](http://postfiles15.naver.net/20150627_142/kyechan99_1435412303736f3jAd_JPEG/2.png?type=w1)
-> ![1](http://postfiles6.naver.net/20150627_277/kyechan99_1435412313204tuD5h_JPEG/3.png?type=w1)
-
-> ![1](http://postfiles11.naver.net/20150627_90/kyechan99_14354123196176N7No_JPEG/4.png?type=w1)
-> ![1](http://postfiles16.naver.net/20150627_95/kyechan99_1435412326667KPxpR_JPEG/5.png?type=w1)
-> ![1](http://postfiles15.naver.net/20150627_190/kyechan99_1435412333960rXNF7_JPEG/6.png?type=w1)
+![1](/assets/img/2015-6-27-Shape/1.png)
+![1](/assets/img/2015-6-27-Shape/2.png)
+![1](/assets/img/2015-6-27-Shape/3.png)
+![1](/assets/img/2015-6-27-Shape/4.png)
 
 ## 인게임 영상
  - 영상 주소 : [바로가기](http://blog.naver.com/kyechan99/220406377159)
