--- a/_posts/Games/2016-7-13-ITUP.md
+++ b/_posts/Games/2016-7-13-ITUP.md
@@ -32,7 +32,7 @@ headerImg: 2016-7-13-ITUP.png
 - 없음
 
 ## 인게임 캡처
-> ![1](http://postfiles7.naver.net/MjAxNzAzMjVfMTc1/MDAxNDkwMzczODQ4MjY2.mzto3je9jnyBqLRGpWfNV7DPhA5sFEW6CfYejCSoTqYg.CGhoBbMDgA9Gnz8petP38_iamO19yCzmNW1__SbYprog.PNG.kyechan99/%EA%B7%B8%EB%A6%BC3.png?type=w1)
+![1](/assets/img/2016-7-13-ITUP/1.png)
 
 ## 인게임 동영상
 - 없음
