--- a/_posts/Games/2016-8-10-GodJump.md
+++ b/_posts/Games/2016-8-10-GodJump.md
@@ -43,9 +43,13 @@ headerImg: 2016-8-10-GodJump.jpg
 - 안드로이드 apk [버전](https://drive.google.com/file/d/0B_zFaAvfZNcNb2RrdGYyVzBMV0k/view?usp=sharing)
 
 ## 인게임 캡처
-> ![1](http://postfiles3.naver.net/MjAxNzAzMjVfOTAg/MDAxNDkwMzc0NjQ2OTM3.iGCgBtzBCJ_VTIcCH2VE_4CoNAGeaZurLEefgLUgEw0g.Wly0_CcPf1KOIhc4XaPEC3csCAh0u4B0JnTY90rvnxwg.JPEG.kyechan99/%EA%B7%B8%EB%A6%BC18.jpg?type=w1)
-> ![1](http://postfiles4.naver.net/MjAxNzAzMjVfMjA1/MDAxNDkwMzc0NjQ3MDgz.flz2QmXbkbMqPVZJy1I7Ky0Egyi6dtT9Zh36rklEnUwg.xPxxQd50D7YtyK6H9YXK0tW2NKthR2ReZuZMh6ZA7pcg.JPEG.kyechan99/%EA%B7%B8%EB%A6%BC19.jpg?type=w1)
-> ![1](http://postfiles7.naver.net/MjAxNzAzMjVfMTc2/MDAxNDkwMzc0NjQ3MjQ2.VsLOlzkXe8KB6XlM_Ho7xHpkwN-GH3fvMXKDPLEMv3cg.43gMYytFspYnylbDnxQHm98YsgfhI2D0kaRkjGQ8sEUg.JPEG.kyechan99/%EA%B7%B8%EB%A6%BC20.jpg?type=w1)
+![1](/assets/img/2016-8-10-GodJump/1.jpg)
+
+
+![1](/assets/img/2016-8-10-GodJump/2.jpg)
+
+
+![1](/assets/img/2016-8-10-GodJump/3.jpg)
 
 ## 인게임 동영상
 - 없음
