--- a/_posts/Games/2017-3-25-RockU.md
+++ b/_posts/Games/2017-3-25-RockU.md
@@ -33,7 +33,7 @@ headerImg: 2017-3-25-RockU.jpg
 - 없음 ( 음원 문제 )
 
 ## 인게임 캡처
-> ![1](http://postfiles16.naver.net/MjAxNzAzMjVfMjIg/MDAxNDkwMzc0NDkzMjk4.jjgxeN01w_Lc--hSaP8Zz7r9MIz7EmVjo-tkGvKandUg.xbZuOvXiFvhIujKe00r67EEvRVnf3VUjXf2CGXcAhNsg.JPEG.kyechan99/%EA%B7%B8%EB%A6%BC4.jpg?type=w1)
+![1](/assets/img/2017-3-25-RockU/1.jpg)
 
 ## 인게임 동영상
 - 없음
