--- a/_posts/Web/2021-3-29-Dragond.md
+++ b/_posts/Web/2021-3-29-Dragond.md
@@ -10,6 +10,13 @@ haveImg: true
 headerImg: 2021-3-29-dragond.png
 ---
 
+<p style="display:none;">
+개인적으로 개발중이던 웹 소설 서비스를 진행하다가 제작하게된 컴포넌트입니다. 마우스로 드래그한후, 선택한 문자에 대한 처리를 위한 기능이 필요했는데요.
+
+필요한 기능들을 popup 으로 띄우는 디바이스(dialog 라는 표현이 더 어울릴지도 모르겠습니다)를 구현하기로 했던 것입니다. 본 프로젝트에만 적용하기에는 활용성이 커보이는 기능이기도 하여 프로젝트를 따로 떼어와 진행하게 되었습니다.
+</p>
+
+
 <br/><br/><br/>
 
 <p align="center">
