fix: Lostwak 이미지 주소 불러오기

--- a/_posts/Games/2023-3-26-Lostwak.md
+++ b/_posts/Games/2023-3-26-Lostwak.md
@@ -56,7 +56,7 @@ headerImg: 2023-3-26-Lostwak.png
 
 연공전 6개월 전이 되어서야 비로소 '올해가 아니면 생각만 하는 사람이 되버릴지 몰라' 싶어버렸습니다.
 
-![1](https://cafeptthumb-phinf.pstatic.net/MjAyMzAxMDJfMTYx/MDAxNjcyNjAxMDgxMzM4.xTJse5efq4E8yFGvVEAhneLkHH-aBDmpHjlQSIyATeQg.2NPvuXd6rG977Mq_zP3Hniy7_G5d-PC3mrznuEXsIaMg.PNG/image.png?type=w1600)
+<img src="/assets/img/2023-3-26-Lostwak/1.png"/>
 
 (6월, 눈물의 첫 커밋)
 
@@ -69,7 +69,7 @@ headerImg: 2023-3-26-Lostwak.png
 
 시참을 활용한 협동 온라인으로 결정하게 되었습니다.
 
-![2](https://cafeptthumb-phinf.pstatic.net/MjAyMzAxMDJfMTc2/MDAxNjcyNjU2NDY3NjAx.SFBbpupmqlmZ9EZRB-hKm3XOCvuXfgOV4gPBnWKLMLgg.AJemwyTRGmEfiFU7VGbmCw9qopYAYTXzGKlW0N3rOucg.PNG/image.png?type=w1600)
+<img src="/assets/img/2023-3-26-Lostwak/2.png"/>
 
 국밥, 굴소스는 모두 이유가 있어..
 
@@ -114,7 +114,7 @@ headerImg: 2023-3-26-Lostwak.png
 이땐 정말 게임 전체를 갈아 엎고 거의 새로 만들어야 했기 때문에 정말 고통의 결정이었습니다만 돌이켜보면 게임 내 컨텐츠들과 레이드 기믹의 다양성을 위해서 꼭 필요했던 작업이었네요.
 
 <p align="center">
-    <img src="https://cafeptthumb-phinf.pstatic.net/MjAyMzAxMDJfMjMy/MDAxNjcyNjQzNTIxMDcz.ZfdVe6KRhrSQSIKmwcVPXlszBsorfSgT9L0pS7DZIksg.o-NgKJ5FU7o1bW_Ocg0FcNRz5hY7b_GQSBFl6YT3RM8g.PNG/1111.png?type=w1600"/>
+    <img src="/assets/img/2023-3-26-Lostwak/3.png"/>
     <p align="center">
         (좌)구 2D 버전   /   (우)현 3D 버전
     </p>
