fix: 포트폴리오 내용을 포스팅으로 변경

--- a/_posts/Web/2023-6-1-Desk-It.md
+++ b/_posts/Web/2023-6-1-Desk-It.md
@@ -118,6 +118,6 @@ headerImg: 2023-6-1-Desk-It.png
 Typescript 같은 경우는 쓰다보니 이점이 너무 많고 코드가 정리되는 체감이 많이 들어 많이 사용은 하고 있었습니다만 Redux 와 styled-component 는 고민이 조금 필요했습니다.
 
 아직은 다른 상태 관리 모듈에 비해 Redux가 많이 쓰인다고는 하나 Recoil이 확실히 편해보이기는 했습니다.
-다만 Redux를 이번에 선택하게 된건 기간이 정해져 있다 보니 프론트 맡은 사람들끼리 조금 더 익숙한 기술을 선택해야 했다는 점과 프로젝트에 들어가는 Editor 기능이 조금 복잡한 데이터로 관리 되어야 하다 보니 Recoil 보다는 Redux를 선택하게 되었습니다.
+다만 Redux를 이번에 선택하게 된건 기간이 정해져 있다 보니 프론트 맡은 사람들끼리 조금 더 익숙한 기술을 선택해야 했다는 점과 프로젝트에 들어가는 Editor 기능이 조금 복잡한 데이터로 관리 되어야 하다 보니 Recoil 보다는 Redux를 선택하게 되었습니다. dispatch로 상세 데이터 조절을 재검사했어야 했거든요.
 사실 styled-component 는 처음 들었을때 부터 왜 쓰는지 이해가 안되었었는데요. 이전에 [yuristrap](https://kyechan99.github.io/web/2021/03/15/Yuristrap.html) 프레임워크를 만들었던것 처럼, sass 를 통해 디자인 하나하나를 클래스로 조각마다 만들어서 조합하는 형태를 선호했던 탓인 것 같아요.
-그런데 역시 사람은 적응의 동물고, styled-component 를 쓰면 쓸수록 장점도 많고 이전 처럼 블록 조합하는 형태처럼 사용할 수 있게도 된 것 같아서 요즘은 또 선호하게 된 것 같습니다.
+그런데 역시 사람은 적응의 동물고, 컴포넌트를 세부적으로 나누어서 개발하다 보니 css-in-js 장점이 몸소 느껴졌습니다. styled-component 를 쓰면 쓸수록 장점도 많고 이전 처럼 블록 조합하는 형태처럼 사용할 수 있게도 된 것 같아서 요즘은 또 선호하게 된 것 같습니다.
