오타 & 이미지 리사이징

--- a/posts/project/games/tiler.mdx
+++ b/posts/project/games/tiler.mdx
@@ -18,7 +18,7 @@ headerImg: 2021-2-5-Tiler.png
 
 사실 입대전에 친구 한명과 개발을 시작했었던 프로젝트입니다. 당시에는 3D로 개발을 시작했었는데 아무래도 디자이너가 없다보니 부족한 리소스 및 시간 소요가 많이 커 끝내 개발을 완성하지 못했습니다. 이번엔 3D에서 2D로 리소스 부담을 줄이고 부족했던 기획안을 수정 및 동료를 늘려 무사히 완성할 수  있었습니다.
 
-약 한달의 시간으로 개발을 완성했는데요. 종일 화면공유를 통해서 개발하다 보니 문제 파악과 개발 상태를 서로 공유하다 보니 개발 기간을 많이 단축할 수 있었던 것 같습니다. 대체로 종일 개발을 하다가 새벽에 병합을 진행했는데요. 병합 이후 서로 게임을 플레이 했을때 나타나는 버그가 정말 재밌었습니다. 고통스럽긴 했지만 버그를 해결하고 자야된다는 생각 떄문에 모두 버그가 고쳐질때까지 같이 잠도 못자고 머리를 싸맸던 기억이 새록새록합니다. 
+약 한달의 시간으로 개발을 완성했는데요. 종일 화면공유를 통해서 개발하다 보니 문제 파악과 개발 상태를 서로 공유하다 보니 개발 기간을 많이 단축할 수 있었던 것 같습니다. 대체로 종일 개발을 하다가 새벽에 병합을 진행했는데요. 병합 이후 서로 게임을 플레이 했을때 나타나는 버그가 정말 재밌었습니다. 고통스럽긴 했지만 버그를 해결하고 자야된다는 생각 때문에 모두 버그가 고쳐질때까지 같이 잠도 못자고 머리를 싸맸던 기억이 새록새록합니다. 
 
 
 ## 특징
