--- a/posts/post/lib/storybook.mdx
+++ b/posts/post/lib/storybook.mdx
@@ -257,7 +257,7 @@ export interface CustomButtonProps {
 
 ### argTypes - if
 뜻 그대로 조건문입니다.
-어떤 props를 사용한다 할떄 조건을 사용할 수 있습니다.
+어떤 props를 사용한다 할때 조건을 사용할 수 있습니다.
 
 ```js
 argTypes: {
@@ -294,7 +294,7 @@ argTypes: {
   }
 }
 ```
-보통 Typescript를 사용하면 알아서 options도 정해주는데, mapping은 해당 값을 말그대로 다시 매핑할떄 사용한다 생각하면 된다고 생각합니다.
+보통 Typescript를 사용하면 알아서 options도 정해주는데, mapping은 해당 값을 말그대로 다시 매핑할때 사용한다 생각하면 된다고 생각합니다.
 예시로 primary를 선택하면 실제로는 secondary를 사용하는 것처럼 매핑했습니다.
 
 ### argTypes - table
