fix: Search 반응형

--- a/posts/project/games/loswak.mdx
+++ b/posts/project/games/loswak.mdx
@@ -108,10 +108,7 @@ headerImg: 2023-3-26-Lostwak.png
 
 이땐 정말 게임 전체를 갈아 엎고 거의 새로 만들어야 했기 때문에 정말 고통의 결정이었습니다만 돌이켜보면 게임 내 컨텐츠들과 레이드 기믹의 다양성을 위해서 꼭 필요했던 작업이었네요.
 
-<p align="center">
-  <img src="/img/2023-3-26-Lostwak/3.png" />
-  <p align="center">(좌)구 2D 버전 / (우)현 3D 버전</p>
-</p>
+![lostwak-3](/img/2023-3-26-Lostwak/3.png)
 
 ​
 
