--- a/posts/project/web/desk-it.mdx
+++ b/posts/project/web/desk-it.mdx
@@ -29,6 +29,7 @@ headerImg: 2023-6-1-Desk-It.png
     frameborder="0"
     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
     allowfullscreen
+    loading="lazy"
   ></iframe>
 </div>
 
