--- a/posts/project/games/loswak.mdx
+++ b/posts/project/games/loswak.mdx
@@ -29,6 +29,7 @@ headerImg: 2023-3-26-Lostwak.png
     frameBorder="0"
     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
     allowFullScreen
+    loading="lazy"
   ></iframe>
 </div>
 
