fix: file format

--- a/posts/post/lib/image-optimization.mdx
+++ b/posts/post/lib/image-optimization.mdx
@@ -165,7 +165,7 @@ img 의 lazy 속성을 사용하는 방법 외에도 `IntersectionObserver` 를 
 [Cloudinary](https://cloudinary.com/cookbook/resize_an_image) 나 [Imagekit](https://docs.imagekit.io/features/image-transformations/resize-crop-and-other-transformations) 과 같이
 이미지 리사이즈를 지원해주는 서비스를 사용한다면 이러한 방식을 사용하기 매우 유용해집니다.
 
-![blur_0](/img/2024-1-1-imageop/pinterest.PNG)
+![blur_0](/img/2024-1-1-imageop/pinterest.png)
 
 강제로 늘려 Blur된 이미지가 아니라 Pinterest 와 같이 단일 색상으로 보여지는 기능을 픽셀 1x1 인 이미지를 늘림으로 구현해 볼 수도 있을 것 같습니다.
 물론 주요 색상으로 추출하기 위해선 별도의 섬세한 작업이 들어가겠지만요.
