:memo: 오만했던 나에게 (2023 회고)

--- a/posts/project/web/blur-pencil.mdx
+++ b/posts/project/web/blur-pencil.mdx
@@ -4,6 +4,7 @@ title: BLUR PENCIL
 date: 2020-11-1
 category: Web
 description: 자동 모자이크 웹 서비스
+tags: [Web, Vue, Osam]
 keywords: Web, Vue, API, Blur, Osam, Mosaic
 comments: false
 haveImg: true
