--- a/posts/post/lib/npm-1.mdx
+++ b/posts/post/lib/npm-1.mdx
@@ -3,7 +3,7 @@ layout: post
 title: React NPM 배포 연대기 - 1
 date: 2024-1-18
 category: Lib
-description: React Component NPM 배포하기 설정편
+description: React Component NPM 배포하기 - 설정편
 tags: [React, NPM, Rollup, JS, Component]
 keywords: React, NPM, Rollup, JS, Component
 haveImg: true
