--- a/posts/post/lib/npm-1.mdx
+++ b/posts/post/lib/npm-1.mdx
@@ -1,9 +1,9 @@
 ---
 layout: post
-title: React NPM 배포 연대기 - 1
+title: NPM 배포 연대기 - 1. 설정
 date: 2024-1-18
 category: Lib
-description: React Component NPM 배포하기 - 설정편
+description: NPM 배포하기 - 설정편
 tags: [React, NPM, Rollup, JS, Component]
 keywords: React, NPM, Rollup, JS, Component
 haveImg: true
