--- a/posts/post/lib/npm-2.mdx
+++ b/posts/post/lib/npm-2.mdx
@@ -1,9 +1,9 @@
 ---
 layout: post
-title: React NPM 배포 연대기 - 2
+title: NPM 배포 연대기 - 2. 문서
 date: 2024-1-19
 category: Lib
-description: React Component NPM 배포하기 - 문서 관리편
+description: NPM 배포하기 - 문서 관리편
 tags: [React, NPM, Rollup, JS, Component]
 keywords: React, NPM, Rollup, JS, Component
 haveImg: true
