fix: npm-3 포스트 이미지 파일명 수정

--- a/posts/post/lib/npm-3.mdx
+++ b/posts/post/lib/npm-3.mdx
@@ -109,7 +109,7 @@ Github [Settings](https://github.com/settings/profile) 페이지에서 Developer
 
 Personal access token의 Tokens 메뉴에서 새 토큰을 발급받습니다.
 
-![access](/img/2024-1-18-npm/access.JPG)
+![access](/img/2024-1-18-npm/access.jpg)
 
 이름의 경우 이 토큰이 어떤 역할을 위해 만들었는지 기억하기 쉬운 이름으로 설정하고 만료기간은 상황에 맞게 설정해주세요.
 
